@@ -1,3 +1,7 @@
+2002-02-03 20:15
+ Result:
+  - Added metadata query methods
+  - Removed unnecessary friendship with Tuple
 2002-02-03 06:00
  Docs:
   - More examples
